...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: Text(widget.alarm == null ? 'Nueva Alarma' : 'Editar Alarma'),
        actions: [
          if (widget.alarm != null)
            IconButton(
              icon: const Icon(Icons.delete),
              onPressed: () {
                Provider.of<AlarmProvider>(context, listen: false)
...
          ],
        ),
      ),
      floatingActionButton: FloatingActionButton.extended(
        onPressed: _saveAlarm,
        icon: const Icon(Icons.save),
        label: const Text('Guardar'),
      ),
      floatingActionButtonLocation: FloatingActionButtonLocation.centerFloat,
    );
  }
} // Fin de la clase _AlarmDetailScreenState

...
