...
  @HiveField(6)
  final String? customSoundUri; // Nuevo campo para el sonido personalizado
  
  // Getters necesarios para NotificationService
  int get hour => time.hour;
  int get minute => time.minute;
  String get title => label.isNotEmpty ? label : 'Alarma Matemática';
  int get difficulty => mathProblemDifficulty;

  Alarm({
    required this.id,
    required this.time,
    required this.days,
...
